# rust-gitlab

./: .gitattributes  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  rustfmt.toml
.gitlab/: artifacts.yml  cargo.yml  rules.yml
.gitlab/ci/: cargo-audit.sh  cargo2junit.sh  tarpaulin.sh
data/: README.md  award_emoji.json  commit_note.json  commit_status.json  discussion.json  fetch_from_gitlab.py  group.json  issue.json  issue_reference.json  job.json  member.json  merge_request.json  merge_request_basic.json  merge_train.json  note.json  pipeline.json  pipeline_basic.json  pipeline_variable.json  project.json  project_hook.json  repo_branch.json  repo_commit_detail.json  resource_label_event.json  user.json  user_basic.json  user_full.json  user_public.json
src/: api.rs  auth.rs  error.rs  gitlab.rs  hooks.rs  lib.rs  macros.rs  query.rs  query_common.rs  query_prelude.rs  systemhooks.rs  systemhooks.rs.in  test.rs  types.rs  types.rs.in  webhooks.rs  webhooks.rs.in
src/api/: README.md  client.rs  common.rs  deploy_keys.rs  endpoint.rs  endpoint_prelude.rs  error.rs  groups.rs  helpers.rs  ignore.rs  issues.rs  paged.rs  params.rs  projects.rs  query.rs  raw.rs  retry.rs  sudo.rs  users.rs
src/api/deploy_keys/: deploy_keys.rs
src/api/groups/: create.rs  edit.rs  group.rs  groups.rs  issues.rs  members.rs  milestones.rs  projects.rs  subgroups.rs
src/api/groups/members/: add.rs  edit.rs  member.rs  members.rs  remove.rs
src/api/groups/milestones/: create.rs
src/api/groups/projects/: projects.rs
src/api/groups/subgroups/: subgroups.rs
src/api/issues/: groups.rs  projects.rs
src/api/paged/: all_at_once.rs  lazy.rs  link_header.rs  pagination.rs
src/api/projects/: create.rs  deploy_keys.rs  edit.rs  environments.rs  hooks.rs  issues.rs  job.rs  jobs.rs  labels.rs  members.rs  merge_requests.rs  merge_trains.rs  milestones.rs  pipelines.rs  project.rs  projects.rs  protected_branches.rs  protected_tags.rs  releases.rs  repository.rs  variables.rs
src/api/projects/deploy_keys/: create.rs  delete.rs  deploy_key.rs  deploy_keys.rs  edit.rs  enable.rs
src/api/projects/environments/: environment.rs  environments.rs
src/api/projects/hooks/: create.rs  delete.rs  edit.rs  hook.rs  hooks.rs
src/api/projects/issues/: create.rs  edit.rs  issue.rs  issues.rs  merge_requests_closing.rs  notes.rs  resource_label_events.rs
src/api/projects/issues/notes/: create.rs  edit.rs  notes.rs
src/api/projects/jobs/: cancel.rs  erase.rs  job.rs  jobs.rs  play.rs  retry.rs  trace.rs
src/api/projects/labels/: create.rs  delete.rs  label.rs  labels.rs  promote.rs
src/api/projects/members/: add.rs  edit.rs  member.rs  members.rs  remove.rs
src/api/projects/merge_requests/: approval_state.rs  approvals.rs  approve.rs  awards.rs  changes.rs  commits.rs  create.rs  discussions.rs  edit.rs  issues_closed_by.rs  merge.rs  merge_request.rs  merge_requests.rs  notes.rs  pipelines.rs  rebase.rs  resource_label_events.rs  unapprove.rs
src/api/projects/merge_requests/approval_state/: approval_state.rs
src/api/projects/merge_requests/approvals/: approvals.rs
src/api/projects/merge_requests/awards/: awards.rs
src/api/projects/merge_requests/discussions/: create.rs  discussions.rs
src/api/projects/merge_requests/notes/: awards.rs  create.rs  edit.rs  notes.rs
src/api/projects/milestones/: create.rs
src/api/projects/pipelines/: cancel.rs  create.rs  delete.rs  jobs.rs  pipeline.rs  pipelines.rs  retry.rs  variables.rs
src/api/projects/pipelines/jobs/: jobs.rs
src/api/projects/protected_branches/: protect.rs  protected_branch.rs  protected_branches.rs  unprotect.rs
src/api/projects/protected_tags/: protect.rs  protected_tag.rs  protected_tags.rs  unprotect.rs
src/api/projects/releases/: releases.rs
src/api/projects/repository/: branches.rs  commits.rs  files.rs  tags.rs  tree.rs
src/api/projects/repository/branches/: branch.rs  branches.rs  create.rs
src/api/projects/variables/: create.rs  update.rs  variable.rs
src/api/users/: current_user.rs  user.rs  users.rs
src/test/: client.rs  mod.rs  types.rs  webhooks.rs
src/test/examples/: pipeline.json
(+16 files in other folders)
